# stratum-eval

./: .gitignore  CONTRIBUTING.md  METRIC_STANDARDS.md  README.md  __init__.py  init.py  pyproject.toml
connectors/: mimic.py  synthetic.py
datasets/: eval_dataset.py
docs/paper/: Methods.md  method_layer2.md  normative_module.md  section_01_identification_strategy_outline.md  section_01_introduction.md
layer1/: invariance.py  performance_matrix.py  spurious_correlation.py
layer2/: conformal.py  ensemble.py  labeler_model.py  uncertainty.py
layer3/: drift.py  performativity.py  shadow_deployment.py
metrics/: base.py
normative/: nsd.py  validator.py
normative/stratum/: fairness.py
report/: stratum_card.py
scripts/: check_metric_specs.py
stratum/: __init__.py  cli.py  exceptions.py
stratum/data/: __init__.py  dataset.py  mimic.py  synthetic.py
stratum/layers/: __init__.py  base.py  layer1.py  layer2.py  layer3.py  layer4.py  layer5.py
stratum/normative/: __init__.py  nsd.py  validator.py
stratum/report/: __init__.py  stratum_report.py
tests/: test_layer2.py
tests/fixtures/: synthetic.py  synthetic_cohort.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_base_metric.py  test_layer1.py  test_layer3_drift.py  test_layer3_shadow_deployment.py
